16) kernel: ralink_raeth: apply GRO changes for our 3.4 tree.<br>
17) kernel: add cryptodev-linux driver 1.8 (http://cryptodev-linux.org).<br>
18) kernel: add AES Engine driver for MT7628 (fully code refactoring).<br>
19) kernel: mips: traps: fix SIGFPE information leak from `do_ov' and `do_trap_or_bp'.<br>
20) kernel: mips: c-r4k: revert fix cache flushing for MT cores (prepare for apply reworked version).<br>
21) kernel: mips: cache flush functions are reworked.<br>
22) kernel: mips: fix bug in using flush_cache_vunmap.<br>
23) kernel: mips: new GIC clocksource. Add new GIC clockevent driver.<br>
24) kernel: usb: qmi_wwan: add Sierra Wireless EM74xx device ID, Gemalto's Cinterion PHxx.<br>
25) kernel: usb: usbnet: cleanup after bind() in probe().<br>
26) kernel: usb: cdc_ncm: toggle altsetting to force reset before setup, do not call usbnet_link_change from cdc_ncm_bind.<br>
27) kernel: usb: qcserial: add Sierra Wireless EM74xx device ID.<br>
28) kernel: usb: xhci: correct the usage of USB_CTRL_SET_TIMEOUT.<br>
29) kernel: net: fastpaths: remove old ugli hack and move flags to end of cb (fix compath with new GRO logic).<br>
30) kernel: net: csum: update csum_block_add to use rotate instead of byteswap.<br>
31) kernel: net: ppp: ensure file->private_data can't be overridden.<br>
32) kernel: net: vlan: propagate gso_max_segs.<br>
33) kernel: net: gro: selective flush of packets.<br>
34) kernel: net: gro: fix possible panic in skb_gro_receive().<br>
35) kernel: net: gro: add checksuming helpers.<br>
36) kernel: net: gro: only verify TCP checksums for candidates.<br>
37) kernel: net: gro: clean up tcpX_gro_receive checksum verification.<br>
38) kernel: net: gro: change GRO overflow strategy.<br>
39) kernel: net: ipv4: fix memory leaks in ip_cmsg_send() callers.<br>
40) kernel: net: ipv6: gro: fix IPV6_GRO_CB(skb)->proto problem.<br>
41) kernel: net: netfilter: nf_defrag_ipv4: drop redundant ip_send_check().<br>
<br>
<br>
<br>