@@ -1883,6 +1883,7 @@
 39) kernel: net: ipv4: fix memory leaks in ip_cmsg_send() callers.<br>
 40) kernel: net: ipv6: gro: fix IPV6_GRO_CB(skb)->proto problem.<br>
 41) kernel: net: netfilter: nf_defrag_ipv4: drop redundant ip_send_check().<br>
+42) kernel: net: bridge: update max_gso_segs and max_gso_size.<br>
 <br>
 <br>
 <br>
